--- a/OOP_HW.csproj
+++ b/OOP_HW.csproj
@@ -66,6 +66,8 @@
     <Compile Include="Buildings\Base\Building.cs" />
     <Compile Include="Buildings\Base\Creator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RationalNumbers\MathHelper.cs" />
+    <Compile Include="RationalNumbers\RationalNumber.cs" />
     <Compile Include="Strings\StringHelper.cs" />
   </ItemGroup>
   <ItemGroup>
